# azure-ai-memory-store

./: .env.example  README.md  Taskfile.yml  main.py  paper.tex  pyproject.toml  requirements.dev.txt  requirements.txt
azure_ai_memory_store/: myagent.py
azure_ai_memory_store/services/: memory_store.py
docs/: __init__.py
docs/tex/: __init__.py  generate.py
docs/tex/artifacts/: architecture.yaml  azure_ai_memory_store.yaml  doc.yaml  introduction.yaml  retreival_model.yaml
docs/tex/models/: document_config.py  document_content.py
tests/: conftest.py
tests/azure_ai_memory_store/: test_myagent.py
tests/azure_ai_memory_store/services/: test_memory_store.py
