[project]
name = "azure-ai-memory-store"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "azure-ai-projects>=2.2.0",
    "azure-core>=1.41.0",
    "azure-identity>=1.25.3",
    "pydantic-settings>=2.14.2",
]

[dependency-groups]
dev = [
    "pip-audit>=2.10.1",
    "pre-commit>=4.6.0",
    "pylatex>=1.4.2",
    "pyright>=1.1.411",
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
    "pytest-cov>=7.1.0",
    "pytest-mock>=3.15.1",
    "pyyaml>=6.0.3",
    "ruff>=0.15.19",
    "types-pyyaml>=6.0.12.20260518",
]

[tool.ruff]
exclude = ["typings", ".venv"]

[tool.ruff.lint]
preview = true
select = ["E", "W", "F", "I", "TID"]

[tool.ruff.format]
docstring-code-format = true

[tool.pyright]
venvPath = "."
venv = ".venv"
exclude = ["typings", ".venv", ".vscode", ".git", "**/node_modules", "**/__pycache__", "**/.*"]

[[tool.mypy.overrides]]
module = ["pylatex.*"]
ignore_missing_imports = true

[tool.coverage.report]
fail_under = 90

[tool.coverage.run]
source = ["azure_ai_memory_store"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-v"

